# git-pijul

./: .gitignore  README.md  git_pijul.py  pyproject.toml
