[tool.poetry]
name = "git-pijul"
version = "0.9.2"
description = "update pijul from git"
authors = ["Jean-Louis Fuchs <jean-louis.fuchs@adfinis-sygroup.ch>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/ganwell/git-pijul"
repository = "https://github.com/ganwell/git-pijul"
classifiers = [
    "Topic :: Software Development :: Version Control",
]

[tool.poetry.scripts]
git-pijul = 'git_pijul:main'

[tool.poetry.dependencies]
python = "^3.9"
tqdm = ">=4.61.2"
click = ">=8.0.1"
temppathlib = ">=1.1.0"
toml = ">=0.10.2"

[tool.poetry.dev-dependencies]
keyring = ">=23.0.1"
SecretStorage = ">=3.3.1"
pytest = ">=6.2.4"
mypy = ">=0.910"
pdbpp = ">=0.10.3"
black = ">=21.7b0"
isort = ">=5.9.2"
python-lsp-server = ">=1.1.0"
flake8 = ">=3.9.2"
flake8-bugbear = ">=21.4.3"
flake8-debugger = ">=4.0.0"
flake8-isort = ">=4.0.0"
flake8-docstrings = ">=1.6.0"
flake8-string-format = ">=0.3.0"
flake8-tuple = ">=0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
